--- a/app/components/mensa/column_customizer/component.css
+++ b/app/components/mensa/column_customizer/component.css
@@ -1,7 +1,7 @@
 .mensa-table {
     &__column_customizer {
         &__popover {
-            @apply absolute right-0 z-20 mt-1 w-64 rounded-xl bg-white dark:bg-gray-800 shadow-lg ring-1 ring-black ring-opacity-5 py-2;
+            @apply fixed z-50 w-64 rounded-xl bg-white dark:bg-gray-800 shadow-lg ring-1 ring-black ring-opacity-5 py-2;
         }
 
         &__heading {
